--- a/recipes/shrimp-pasta.html
+++ b/recipes/shrimp-pasta.html
@@ -9,7 +9,7 @@
     <h1>Shrimp Scampi with Pasta</h1>
     <a href="../index.html">Home</a>
 
-    <p><img src="shrimp-scampi-pasta.webp" alt="shrimp-scampi-pasta"></p>
+    <p><img src="shrimp-scampi-pasta.webp" alt="shrimp-scampi-pasta" width="400" height="330"></p>
     <h2>Description</h2>
     <p>Shrimp scampi with linguine is the ultimate seafood pasta dish. Works with any pasta; angel hair is less filling.</p>
     
